--- a/slm.ipynb
+++ b/slm.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/sh20022002/small-Language-Model/blob/main/slm.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -23,11 +23,7 @@
       },
       "outputs": [
         {
-          "output_type": "display_data",
           "data": {
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ],
             "text/html": [
               "\n",
               "     <input type=\"file\" id=\"files-14560ff0-5813-4187-9471-45c284697a99\" name=\"files[]\" multiple disabled\n",
@@ -212,13 +208,17 @@
               "};\n",
               "})(self);\n",
               "</script> "
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
             ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Saving tokenizer.zip to tokenizer.zip\n"
           ]
@@ -259,8 +259,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Requirement already satisfied: datasets in /usr/local/lib/python3.12/dist-packages (4.0.0)\n",
             "Requirement already satisfied: filelock in /usr/local/lib/python3.12/dist-packages (from datasets) (3.19.1)\n",
@@ -325,7 +325,6 @@
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "Dataset({\n",
@@ -334,8 +333,9 @@
               "})"
             ]
           },
+          "execution_count": 28,
           "metadata": {},
-          "execution_count": 28
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -378,8 +378,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "create_t_f.py\t       __pycache__  slm.ipynb\t\t    train.py\n",
             "hybrid_tokeniztion.py  README.md    tokenizer_state.pkl.gz  transformer.py\n",
@@ -424,9 +424,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "dataset[500]"
-      ],
+      "execution_count": 51,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -434,10 +432,8 @@
         "id": "RaZ0rUG5rrlN",
         "outputId": "50e73192-9529-4dc3-bf3c-854fe8fa8bab"
       },
-      "execution_count": 51,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "{'instruction': 'Describe the character of Romeo from Romeo and Juliet.',\n",
@@ -446,9 +442,13 @@
               " 'text': 'Below is an instruction that describes a task. Write a response that appropriately completes the request.\\n\\n### Instruction:\\nDescribe the character of Romeo from Romeo and Juliet.\\n\\n### Response:\\nRomeo is a tragic hero with a passionate heart. He is brave and impulsive, often making decisions without fully thinking them through. He is deeply romantic and has a heartbreaking loyalty to his family and his beloved, Juliet.'}"
             ]
           },
+          "execution_count": 51,
           "metadata": {},
-          "execution_count": 51
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "dataset[500]"
       ]
     },
     {
@@ -512,9 +512,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 53,
       "metadata": {
         "id": "f740bab7"
       },
+      "outputs": [],
       "source": [
         "# Split the dataset using the datasets library's built-in method\n",
         "split_dataset = dataset.train_test_split(test_size=0.1, seed=42)\n",
@@ -530,26 +532,24 @@
         "\n",
         "train_loader = DataLoader(train_dataset, batch_size=8, shuffle=True, collate_fn=collate_fn)\n",
         "val_loader = DataLoader(val_dataset, batch_size=8, shuffle=False, collate_fn=collate_fn)"
-      ],
-      "execution_count": 53,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": 47,
       "metadata": {
-        "id": "L3hgu2M2DzNH",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 408
         },
+        "id": "L3hgu2M2DzNH",
         "outputId": "4703f1da-6cce-4f77-cf41-b55005228007"
       },
       "outputs": [
         {
-          "output_type": "error",
           "ename": "ValueError",
           "evalue": "too many values to unpack (expected 3)",
+          "output_type": "error",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
@@ -605,119 +605,14 @@
       "source": [
         "The `TypeError` in the `train_test_split` function arises because `sklearn`'s `train_test_split` is not designed to directly handle custom PyTorch `Dataset` objects. To resolve this, we will first split the underlying data (the list of dictionaries) into training and validation sets using `train_test_split`, and then create `QADataset` instances for each split."
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "06aa417f"
-      },
-      "source": [
-        "import inspect\n",
-        "import torch.nn as nn\n",
-        "\n",
-        "def train_model_modified(model, train_loader, val_loader, optimizer, device, epochs=1, ignore_index=-100):\n",
-        "    model.to(device)\n",
-        "    loss_fn = nn.CrossEntropyLoss(ignore_index=ignore_index)\n",
-        "\n",
-        "    train_losses, val_losses, val_accuracies = [], [], []\n",
-        "\n",
-        "    # Grab embedding layer to know vocab size and perform initial embedding lookup\n",
-        "    emb_layer = None\n",
-        "    for name, module in model.named_modules():\n",
-        "        if isinstance(module, nn.Embedding):\n",
-        "            emb_layer = module\n",
-        "            break\n",
-        "\n",
-        "    if emb_layer is None:\n",
-        "         raise ValueError(\"Model must contain an nn.Embedding layer.\")\n",
-        "\n",
-        "\n",
-        "    for epoch in range(epochs):\n",
-        "        model.train()\n",
-        "        total_loss = 0.0\n",
-        "\n",
-        "        for batch in train_loader:\n",
-        "            ids    = batch[\"input_ids\"].to(device)          # [B, T]\n",
-        "            labels = batch[\"labels\"].to(device)             # [B, T] with -100 on pads\n",
-        "\n",
-        "            attn   = batch.get(\"attention_mask\", None)     # [B, T] (optional)\n",
-        "\n",
-        "            # Perform embedding lookup before passing to the rest of the model\n",
-        "            embedded_ids = emb_layer(ids) # [B, T, C]\n",
-        "\n",
-        "            optimizer.zero_grad()\n",
-        "\n",
-        "            # Check if model's forward method accepts attention_mask (excluding the initial embedding layer)\n",
-        "            # We assume the attention mask is used in the core transformer blocks\n",
-        "            forward_signature = inspect.signature(model.forward)\n",
-        "            if 'attention_mask' in forward_signature.parameters and attn is not None:\n",
-        "                 # Pass the embedded IDs and attention mask to the model's forward method\n",
-        "                 # Note: This assumes the model's forward method expects an embedded input\n",
-        "                 # If your model's forward method expects raw IDs and handles embedding internally,\n",
-        "                 # the previous attempt to call model(ids, attention_mask=attn) would be correct\n",
-        "                 # and the issue lies within the model's internal handling of attention_mask.\n",
-        "                 # Based on the traceback, your model seems to expect [B, T, C] input directly\n",
-        "                 # in its core layers, so passing embedded_ids is the correct approach here.\n",
-        "                 logits = model(embedded_ids, attention_mask=attn) # [B, T, V]\n",
-        "            else:\n",
-        "                # Pass the embedded IDs to the model's forward method\n",
-        "                logits = model(embedded_ids) # [B, T, V]\n",
-        "\n",
-        "\n",
-        "            # labels vs logits vocab check (excluding ignore_index)\n",
-        "            # This check might need adjustment if the model's output is not directly logits over vocab\n",
-        "            # if (labels != ignore_index).any():\n",
-        "            #     V = logits.size(-1)\n",
-        "            #     max_lab = int(labels[labels != ignore_index].max())\n",
-        "            #     assert max_lab < V, f\"Label {max_lab} >= logits classes {V}\"\n",
-        "\n",
-        "            loss = loss_fn(logits.reshape(-1, logits.size(-1)), labels.reshape(-1))\n",
-        "            loss.backward()\n",
-        "            optimizer.step()\n",
-        "\n",
-        "            total_loss += float(loss)\n",
-        "\n",
-        "        avg_train_loss = total_loss / max(1, len(train_loader))\n",
-        "        train_losses.append(avg_train_loss)\n",
-        "\n",
-        "        print(f\"Epoch {epoch+1}/{epochs}, Average Training Loss: {avg_train_loss:.4f}\")\n",
-        "\n",
-        "        # Optional: Add validation step here\n",
-        "        model.eval()\n",
-        "        val_loss, correct, total = 0.0, 0, 0\n",
-        "        with torch.no_grad():\n",
-        "            for batch in val_loader:\n",
-        "                ids = batch[\"input_ids\"].to(device)\n",
-        "                labels = batch[\"labels\"].to(device)\n",
-        "                attn = batch.get(\"attention_mask\", None)\n",
-        "\n",
-        "                embedded_ids = emb_layer(ids)\n",
-        "\n",
-        "                forward_signature = inspect.signature(model.forward)\n",
-        "                if 'attention_mask' in forward_signature.parameters and attn is not None:\n",
-        "                    logits = model(embedded_ids, attention_mask=attn)\n",
-        "                else:\n",
-        "                    logits = model(embedded_ids)\n",
-        "\n",
-        "\n",
-        "                # loss = loss_fn(logits.reshape(-1, logits.size(-1)), labels.reshape(-1))\n",
-        "                # val_loss += float(loss)\n",
-        "\n",
-        "        # avg_val_loss = val_loss / max(1, len(val_loader))\n",
-        "        # val_losses.append(avg_val_loss)\n",
-        "        # print(f\"Epoch {epoch+1}/{epochs}, Average Validation Loss: {avg_val_loss:.4f}\")\n",
-        "        model.train() # Set model back to training mode"
-      ],
-      "execution_count": null,
-      "outputs": []
     }
   ],
   "metadata": {
     "accelerator": "GPU",
     "colab": {
       "gpuType": "T4",
-      "provenance": [],
-      "include_colab_link": true
+      "include_colab_link": true,
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
