--- a/slm.ipynb
+++ b/slm.ipynb
@@ -536,7 +536,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -575,6 +575,7 @@
         }
       ],
       "source": [
+        "from torch.optim import AdamW\n",
         "model = Transformer(\n",
         "    vocab_size=len(tok.token2id),\n",
         "    dim=512,\n",
@@ -583,9 +584,14 @@
         "    mlp_dim=2048,\n",
         "    window=256\n",
         ").to(device)\n",
-        "from torch.optim import AdamW\n",
+        "\n",
         "\n",
         "optimizer = AdamW(model.parameters(), lr=3e-4)\n",
+        "\n",
+        "vocab = tok.vocab_size\n",
+        "model.resize_token_embeddings(vocab)\n",
+        "assert model.token_emb.num_embeddings == vocab\n",
+        "\n",
         "\n",
         "train_model(\n",
         "    model=model,\n",
