--- a/slm.ipynb
+++ b/slm.ipynb
@@ -583,7 +583,7 @@
         "    heads=8,\n",
         "    mlp_dim=2048,\n",
         "    window=256\n",
-        ").to(device)\n",
+        ")\n",
         "\n",
         "\n",
         "optimizer = AdamW(model.parameters(), lr=3e-4)\n",
@@ -592,6 +592,7 @@
         "model.resize_token_embeddings(vocab)\n",
         "assert model.token_emb.num_embeddings == vocab\n",
         "\n",
+        "# model.to(device)\n",
         "\n",
         "train_model(\n",
         "    model=model,\n",
