--- a/slm.ipynb
+++ b/slm.ipynb
@@ -585,14 +585,19 @@
         "    window=256\n",
         ")\n",
         "\n",
-        "\n",
-        "optimizer = AdamW(model.parameters(), lr=3e-4)\n",
-        "\n",
+        "# after you finish adding data to tokenizer and freeze it:\n",
         "vocab = tok.vocab_size\n",
-        "model.resize_token_embeddings(vocab)\n",
-        "assert model.token_emb.num_embeddings == vocab\n",
+        "pad_id = '<PAD>'\n",
+        "assert 0 <= pad_id < vocab, f\"pad_id {pad_id} must be in [0, {vocab-1}]\"\n",
         "\n",
-        "# model.to(device)\n",
+        "model.resize_token_embeddings(vocab)   # updates emb + head on current device\n",
+        "model.to(device)                       # move final model to GPU/CPU\n",
+        "optimizer = AdamW(model.parameters(), lr=3e-4)  # create AFTER to(device)\n",
+        "\n",
+        "# hard guards:\n",
+        "assert model.token_emb.num_embeddings == vocab\n",
+        "assert model.to_logits.out_features   == vocab\n",
+        "\n",
         "\n",
         "train_model(\n",
         "    model=model,\n",
