--- a/slm.ipynb
+++ b/slm.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/sh20022002/small-Language-Model/blob/main/slm.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -19,16 +19,20 @@
           "height": 73
         },
         "id": "XXcre7am-1qF",
-        "outputId": "7fe63c8a-9e9b-4c89-9f69-8e87c632f8a7"
+        "outputId": "60ada113-cacf-4f62-ff66-78fa0c9c2227"
       },
       "outputs": [
         {
+          "output_type": "display_data",
           "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-14560ff0-5813-4187-9471-45c284697a99\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-2044988e-6667-478a-80b7-1fe9bafa0823\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-14560ff0-5813-4187-9471-45c284697a99\">\n",
+              "     <output id=\"result-2044988e-6667-478a-80b7-1fe9bafa0823\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -208,19 +212,15 @@
               "};\n",
               "})(self);\n",
               "</script> "
-            ],
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
             ]
           },
-          "metadata": {},
-          "output_type": "display_data"
+          "metadata": {}
         },
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Saving tokenizer.zip to tokenizer.zip\n"
+            "Saving tokenizer.zip to tokenizer (3).zip\n"
           ]
         }
       ],
@@ -231,12 +231,14 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "0wtsZleANP6o"
+      },
       "source": []
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 2,
       "metadata": {
         "id": "5Jwk6myk_LdW"
       },
@@ -254,18 +256,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "7PVnUPYb_izK",
-        "outputId": "d3e7ad5c-603c-43a7-c1f2-5edd20cec469"
+        "outputId": "c5ec576a-db5b-45d0-bbb8-a6c26221135d"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Requirement already satisfied: datasets in /usr/local/lib/python3.12/dist-packages (4.0.0)\n",
             "Requirement already satisfied: filelock in /usr/local/lib/python3.12/dist-packages (from datasets) (3.19.1)\n",
@@ -273,7 +275,7 @@
             "Requirement already satisfied: pyarrow>=15.0.0 in /usr/local/lib/python3.12/dist-packages (from datasets) (18.1.0)\n",
             "Requirement already satisfied: dill<0.3.9,>=0.3.0 in /usr/local/lib/python3.12/dist-packages (from datasets) (0.3.8)\n",
             "Requirement already satisfied: pandas in /usr/local/lib/python3.12/dist-packages (from datasets) (2.2.2)\n",
-            "Requirement already satisfied: requests>=2.32.2 in /usr/local/lib/python3.12/dist-packages (from datasets) (2.32.3)\n",
+            "Requirement already satisfied: requests>=2.32.2 in /usr/local/lib/python3.12/dist-packages (from datasets) (2.32.4)\n",
             "Requirement already satisfied: tqdm>=4.66.3 in /usr/local/lib/python3.12/dist-packages (from datasets) (4.67.1)\n",
             "Requirement already satisfied: xxhash in /usr/local/lib/python3.12/dist-packages (from datasets) (3.5.0)\n",
             "Requirement already satisfied: multiprocess<0.70.17 in /usr/local/lib/python3.12/dist-packages (from datasets) (0.70.16)\n",
@@ -284,7 +286,7 @@
             "Requirement already satisfied: aiohttp!=4.0.0a0,!=4.0.0a1 in /usr/local/lib/python3.12/dist-packages (from fsspec[http]<=2025.3.0,>=2023.1.0->datasets) (3.12.15)\n",
             "Requirement already satisfied: typing-extensions>=3.7.4.3 in /usr/local/lib/python3.12/dist-packages (from huggingface-hub>=0.24.0->datasets) (4.14.1)\n",
             "Requirement already satisfied: hf-xet<2.0.0,>=1.1.3 in /usr/local/lib/python3.12/dist-packages (from huggingface-hub>=0.24.0->datasets) (1.1.7)\n",
-            "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.12/dist-packages (from requests>=2.32.2->datasets) (3.4.3)\n",
+            "Requirement already satisfied: charset_normalizer<4,>=2 in /usr/local/lib/python3.12/dist-packages (from requests>=2.32.2->datasets) (3.4.3)\n",
             "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.12/dist-packages (from requests>=2.32.2->datasets) (3.10)\n",
             "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.12/dist-packages (from requests>=2.32.2->datasets) (2.5.0)\n",
             "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.12/dist-packages (from requests>=2.32.2->datasets) (2025.8.3)\n",
@@ -308,11 +310,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 4,
       "metadata": {
-        "id": "4XQ6zz2M_rqQ"
+        "id": "4XQ6zz2M_rqQ",
+        "outputId": "916e2302-9525-4c7b-c073-dc173477a6ec",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.12/dist-packages/huggingface_hub/utils/_auth.py:94: UserWarning: \n",
+            "The secret `HF_TOKEN` does not exist in your Colab secrets.\n",
+            "To authenticate with the Hugging Face Hub, create a token in your settings tab (https://huggingface.co/settings/tokens), set it as secret in your Google Colab and restart your session.\n",
+            "You will be able to reuse this secret in all of your notebooks.\n",
+            "Please note that authentication is recommended but still optional to access public models or datasets.\n",
+            "  warnings.warn(\n"
+          ]
+        }
+      ],
       "source": [
         "from datasets import load_dataset\n",
         "dataset = load_dataset(\"tatsu-lab/alpaca\")\n"
@@ -320,16 +339,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "x4P0-LBiCAKz",
-        "outputId": "8703c5c4-0c8c-4532-9129-e19479c0c77c"
+        "outputId": "901884a4-1470-4674-d49e-3e2c86bb58ef"
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "Dataset({\n",
@@ -338,9 +358,8 @@
               "})"
             ]
           },
-          "execution_count": 28,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 5
         }
       ],
       "source": [
@@ -349,7 +368,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 6,
       "metadata": {
         "id": "QZcWqogcCFdD"
       },
@@ -362,7 +381,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 7,
       "metadata": {
         "id": "fi-rkooXDUEF"
       },
@@ -373,18 +392,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "hN1o4ur9ZdkD",
-        "outputId": "fb0e2d6d-e75c-4194-cad1-8fc0aa33f34b"
+        "outputId": "7c29bc8b-2faa-455f-d5d2-2cab36992240"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "create_t_f.py\t       __pycache__  slm.ipynb\t\t    train.py\n",
             "hybrid_tokeniztion.py  README.md    tokenizer_state.pkl.gz  transformer.py\n",
@@ -407,7 +426,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 9,
       "metadata": {
         "id": "kiaSCS4gGc4L"
       },
@@ -418,7 +437,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 10,
       "metadata": {
         "id": "ZoMdwJUccdt_"
       },
@@ -429,16 +448,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "RaZ0rUG5rrlN",
-        "outputId": "50e73192-9529-4dc3-bf3c-854fe8fa8bab"
+        "outputId": "d722f116-6a10-4cf3-f98c-8a97450085e8"
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "{'instruction': 'Describe the character of Romeo from Romeo and Juliet.',\n",
@@ -447,9 +467,8 @@
               " 'text': 'Below is an instruction that describes a task. Write a response that appropriately completes the request.\\n\\n### Instruction:\\nDescribe the character of Romeo from Romeo and Juliet.\\n\\n### Response:\\nRomeo is a tragic hero with a passionate heart. He is brave and impulsive, often making decisions without fully thinking them through. He is deeply romantic and has a heartbreaking loyalty to his family and his beloved, Juliet.'}"
             ]
           },
-          "execution_count": 51,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 11
         }
       ],
       "source": [
@@ -458,7 +477,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": 12,
       "metadata": {
         "id": "WaYmMdONbauq"
       },
@@ -497,27 +516,28 @@
         "            \"labels\": label_tensor\n",
         "        }\n",
         "\n",
-        "def collate_fn(batch):\n",
-        "    input_ids = [item[\"input_ids\"] for item in batch]\n",
-        "    labels = [item[\"labels\"] for item in batch]\n",
+        "from torch.nn.utils.rnn import pad_sequence\n",
         "\n",
-        "    padded_inputs = torch.nn.utils.rnn.pad_sequence(input_ids, batch_first=True, padding_value=0)\n",
-        "    padded_labels = torch.nn.utils.rnn.pad_sequence(labels, batch_first=True, padding_value=-100)\n",
+        "def collate_fn(batch, pad_id=0, ignore_index=-100):\n",
+        "    # 1) pad to [B, T]\n",
+        "    ids = [b[\"input_ids\"] for b in batch]                                  # each [T]\n",
+        "    ids = pad_sequence(ids, batch_first=True, padding_value=pad_id)        # [B, T]\n",
         "\n",
-        "    # Create attention mask: 1 where token is not padding (value is not 0), 0 otherwise\n",
-        "    attention_mask = (padded_inputs != 0).long()\n",
+        "    # 2) build attention mask from padded ids\n",
+        "    attn = (ids != pad_id).long()                                          # [B, T]\n",
         "\n",
-        "    return {\n",
-        "        \"input_ids\": padded_inputs,\n",
-        "        \"labels\": padded_labels,\n",
-        "        \"attention_mask\": attention_mask # Add attention mask here\n",
-        "    }\n",
+        "    # 3) labels align 1:1 with ids; ignore pads for loss\n",
+        "    labels = ids.clone()\n",
+        "    labels[ids == pad_id] = ignore_index                                   # [B, T]\n",
+        "\n",
+        "    return {\"input_ids\": ids, \"attention_mask\": attn, \"labels\": labels}\n",
+        "\n",
         "\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "id": "f740bab7"
       },
@@ -538,8 +558,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
+      "execution_count": 14,
+      "metadata": {
+        "id": "7rFCmGVhNP6q"
+      },
       "outputs": [],
       "source": [
         "\n",
@@ -556,8 +578,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
+      "execution_count": 15,
+      "metadata": {
+        "id": "JgzAwk5zNP6q"
+      },
       "outputs": [],
       "source": [
         "\n",
@@ -571,8 +595,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
+      "execution_count": 16,
+      "metadata": {
+        "id": "Md1oRXuMNP6q"
+      },
       "outputs": [],
       "source": [
         "\n",
@@ -583,8 +609,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
+      "execution_count": 17,
+      "metadata": {
+        "id": "_iz1kBN0NP6q"
+      },
       "outputs": [],
       "source": [
         "\n",
@@ -613,13 +641,44 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
+      "execution_count": 18,
+      "metadata": {
+        "id": "DWaddWKyNP6q",
+        "outputId": "0ea64e7f-1573-40a2-9c0b-9a20dce0ec7d",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 401
+        }
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/5 - Train Loss: 8.0797, Val Loss: 7.4709, Acc: 99.14%\n",
+            "Epoch 2/5 - Train Loss: 6.9071, Val Loss: 6.3526, Acc: 99.69%\n",
+            "Epoch 3/5 - Train Loss: 5.8017, Val Loss: 5.2637, Acc: 99.87%\n",
+            "Epoch 4/5 - Train Loss: 4.7372, Val Loss: 4.2296, Acc: 99.94%\n",
+            "Epoch 5/5 - Train Loss: 3.7530, Val Loss: 3.3078, Acc: 99.96%\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "'module' object is not callable",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-1240753434.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# IMPORTANT: pass the SAME ignore_index to the trainer\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mtrain_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_loader\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mval_loader\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moptimizer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdevice\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mepochs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mignore_index\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mpad_id\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m/content/tokenizer/tokenizer/train.py\u001b[0m in \u001b[0;36mtrain_model\u001b[0;34m(model, train_loader, val_loader, optimizer, device, epochs, ignore_index)\u001b[0m\n\u001b[1;32m     95\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     96\u001b[0m     \u001b[0;31m# plots + csv as you had\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 97\u001b[0;31m     \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfigure\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfigsize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m12\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     98\u001b[0m     \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msubplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m;\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_losses\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'Train Loss'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m;\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mval_losses\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'Val Loss'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     99\u001b[0m     \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mxlabel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Epoch\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m;\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mylabel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Loss\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m;\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlegend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: 'module' object is not callable"
+          ]
+        }
+      ],
       "source": [
         "\n",
         "# IMPORTANT: pass the SAME ignore_index to the trainer\n",
-        "train_model(model, train_loader, val_loader, optimizer, device, epochs=1, ignore_index=pad_id)\n"
+        "train_model(model, train_loader, val_loader, optimizer, device, epochs=5, ignore_index=pad_id)\n"
       ]
     },
     {
@@ -636,8 +695,8 @@
     "accelerator": "GPU",
     "colab": {
       "gpuType": "T4",
-      "include_colab_link": true,
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
